@@ -1,5 +1,11 @@
 2011-01-31  John W. Eaton  <jwe@octave.org>
 
+	* arpack/module.mk (EXTRA_DIST): Include arpack/module.mk in the
+	list.  Remove arpack/src/module.mk and arpacck/util/module.mk
+	from the list.
+
+2011-01-31  John W. Eaton  <jwe@octave.org>
+
 	* arpack/LICENSE: Update to current version from
 	http://www.caam.rice.edu/software/ARPACK.
 	* arpack/ARPACK-license-question.email: Delete as it no longer
